#[package]
#name = "check_schema"
#version = { workspace = true }
#edition = { workspace = true }

#[package.metadata.risc0]
#methods = ["guest"]

[package]
name = "json-validate-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
hex = { workspace = true }
risc0-build = { version = "1.0.5", path = "../../../risc0/build" }
risc0-build-ethereum = { version = "1.1.4", workspace = true }
risc0-zkp = { version = "1.1.2", workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { version = "1.0.0", workspace = true, features = ["client"] }
