[package]
name = "check_schema"
version = "0.12.0"
edition = "2021"

[[bin]]
name = "check_schema"
path = "src/bin/main.rs"

[workspace]

[dependencies]
serde = "1.0"
serde_json = "1.0"
jsonschema = {version = "0.8", default-features = false}

json = "0.12"
json-validate-core = { path = "../../core" }
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = [
  "std",
] }

alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.0.0", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
